--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,21 +13,25 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Checkout the repository
+
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # Step 2: Set up Node.js
+
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '18'  # Use the Node.js version required by your project
+          node-version: '18'
 
-      # Step 3: Install dependencies
+
       - name: Install dependencies
         run: npm install
 
-      # Step 4: Build the application
+      - name: Configure Git
+              run: |
+                git config --global user.name "github-actions[bot]"
+                git config --global user.email "github-actions[bot]@users.noreply.github.com"
+
       - name: Build and deploy the React app to github io
         env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
